@@ -3,7 +3,7 @@ author           = Richard Simões <rsimoes AT cpan DOT org>
 license          = LGPL_3_0
 copyright_holder = Richard Simões
 copyright_year   = 2012
-version          = v0.1.1
+version          = v0.1.2
 
 [@Filter]
 -bundle = @Basic
